--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 100%;
 }
 
 .main {
@@ -18,7 +18,7 @@
 }
 
 .title a {
-  color: #0070f3;
+  color: #0aadff;
   text-decoration: none;
 }
 
@@ -33,6 +33,58 @@
   line-height: 1.15;
   font-size: 4rem;
   text-align: center;
+}
+
+.search {
+  width: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 15px;
+}
+
+.searchTerm {
+  border: 3px solid #0aadff;
+  width: 50%;
+  padding: 5px;
+  height: 36px;
+  border-radius: 0;
+  outline: none;
+  font-size: 20px;
+}
+
+.searchTerm.number {
+  width: 100px;
+}
+
+.searchTerm:first-child {
+  border-right: none;
+  border-radius: 5px 0 0 5px;
+}
+
+.searchTerm:last-child {
+  border-left: none;
+  border-radius: 0 5px 5px 0;
+}
+
+.searchButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 36px;
+  border: 1px solid #0aadff;
+  background: #0aadff;
+  text-align: center;
+  color: #fff;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+.error {
+  color: red;
 }
 
 .grid {
