--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,115 +1,150 @@
 .container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
+    min-height: 100vh;
+    padding: 0 0.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
 
 .main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+    padding: 5rem 0;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .title a {
-  color: #0aadff;
-  text-decoration: none;
+    color: #0aadff;
+    text-decoration: none;
 }
 
 .title a:hover,
 .title a:focus,
 .title a:active {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 .title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-  text-align: center;
+    margin: 0;
+    line-height: 1.15;
+    font-size: 4rem;
+    text-align: center;
 }
 
 .search {
-  width: 100%;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  margin-top: 15px;
-  margin-bottom: 15px;
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 .searchTerm {
-  border: 3px solid #0aadff;
-  width: 50%;
-  padding: 5px;
-  height: 36px;
-  border-radius: 0;
-  outline: none;
-  font-size: 20px;
+    border: 3px solid #0aadff;
+    width: 50%;
+    padding: 5px;
+    height: 36px;
+    border-radius: 0;
+    outline: none;
+    font-size: 20px;
 }
 
 .searchTerm.number {
-  width: 100px;
+    width: 100px;
 }
 
 .searchTerm:first-child {
-  border-right: none;
-  border-radius: 5px 0 0 5px;
+    border-right: none;
+    border-radius: 5px 0 0 5px;
 }
 
 .searchTerm:last-child {
-  border-left: none;
-  border-radius: 0 5px 5px 0;
+    border-left: none;
+    border-radius: 0 5px 5px 0;
 }
 
 .searchButton {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 40px;
-  height: 36px;
-  border: 1px solid #0aadff;
-  background: #0aadff;
-  text-align: center;
-  color: #fff;
-  border-radius: 0 5px 5px 0;
-  cursor: pointer;
-  font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 36px;
+    border: 1px solid #0aadff;
+    background: #0aadff;
+    text-align: center;
+    color: #fff;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+    font-size: 20px;
 }
 
 .error {
-  color: red;
+    color: red;
 }
 
 .grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 1200px;
-  margin-top: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    max-width: 1528px;
+    margin-top: 3rem;
 }
 
 @media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+    .grid {
+        width: 100%;
+        flex-direction: column;
+    }
 }
 
 .card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
+    margin: 1rem;
+    padding: 1.5rem;
+    text-align: left;
+    color: inherit;
+    text-decoration: none;
+    border: 1px solid #eaeaea;
+    border-radius: 10px;
+    transition: color 0.15s ease, border-color 0.15s ease;
+}
+
+.rangeSlider {
+    display: block;
+    -webkit-appearance: none;
+    background-color: #bdc3c7;
+    width: 360px;
+    height: 5px;
+    border-radius: 5px;
+    margin: 0 auto;
+    outline: 0;
+}
+
+.rangeSlider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    background-color: #0aadff;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 2px solid white;
+    cursor: pointer;
+    transition: .3s ease-in-out;
+}
+
+.rangeSlider::-webkit-slider-thumb:hover {
+    background-color: white;
+    border: 2px solid #0aadff;
+}
+
+.rangeSlider::-webkit-slider-thumb:active {
+    transform: scale(1.3);
+}
+
+.rotateSlider {
+    margin-top: 50px;
 }
