--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -15,6 +15,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 .title a {
@@ -92,15 +93,16 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    max-width: 1528px;
-    width: 1528px;
+    max-width: 1350px;
+    width: 100%;
     margin-top: 3rem;
 }
 
 @media (max-width: 600px) {
     .grid {
         width: 100%;
-        flex-direction: column;
+        /* flex-direction: column; */
+        margin-top: 2rem;
     }
 }
 
@@ -113,4 +115,11 @@
     border: 1px solid #eaeaea;
     border-radius: 10px;
     transition: color 0.15s ease, border-color 0.15s ease;
+}
+
+@media (max-width: 600px) {
+    .card {
+        margin: 0.5rem 0;
+        padding: 0.7rem;
+    }
 }
