--- a/src/styles/Rotate.module.css
+++ b/src/styles/Rotate.module.css
@@ -1,8 +1,17 @@
+.main {
+    padding: 0.5rem 0;
+}
+
+.grid {
+    margin-top: 0;
+}
+
 .rangeSlider {
     display: block;
     -webkit-appearance: none;
     background-color: #bdc3c7;
-    width: 360px;
+    width: 100%;
+    max-width: 360px;
     height: 5px;
     border-radius: 5px;
     margin: 0 auto;
@@ -30,10 +39,16 @@
 }
 
 .rotateSlider {
-    margin-top: 50px;
+    margin-top: 2rem;
 }
 
 .card {
     flex: 1;
     height: 65vh;
+}
+
+@media (max-width: 800px) {
+    .card {
+        height: 40vh;
+    }
 }
