--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -40,17 +40,30 @@
     width: 100%;
     position: relative;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     margin-top: 15px;
     margin-bottom: 15px;
 }
 
+.searchContainer {
+    display: flex;
+    flex-direction: row;
+    width: 50%;
+    justify-content: center;
+}
+
+.searchContainer:not(:last-child) {
+     margin-bottom: 10px;
+ }
+
 .searchTerm {
     border: 3px solid #0aadff;
-    width: 50%;
     padding: 5px;
     height: 36px;
-    border-radius: 0;
+    width: 100%;
+    border-radius: 5px;
     outline: none;
     font-size: 20px;
 }
@@ -59,13 +72,12 @@
     width: 100px;
 }
 
-.searchTerm:first-child {
+.searchTerm:first-child:not(:last-child) {
     border-right: none;
     border-radius: 5px 0 0 5px;
 }
 
-.searchTerm:last-child {
-    border-left: none;
+.searchTerm:last-child:not(:first-child) {
     border-radius: 0 5px 5px 0;
 }
 
@@ -73,13 +85,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 40px;
+    width: 100px;
     height: 36px;
     border: 1px solid #0aadff;
     background: #0aadff;
     text-align: center;
     color: #fff;
-    border-radius: 0 5px 5px 0;
+    border-radius: 5px 5px;
     cursor: pointer;
     font-size: 20px;
 }
