--- a/src/components/controls/Select/Select.module.css
+++ b/src/components/controls/Select/Select.module.css
@@ -2,8 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 50px;
-    margin-bottom: 15px;
+    margin: 10px 0;
 }
 
 .select {
